examples/errors/bad_instance_method_args.ik
type Foo class:
    fn foo(Int) Self

instance Foo Bool:
    // too many args
    fn foo(x, y):
        return True

fn main():
    print("\n")
